progress on wip

--- a/wip/index.html
+++ b/wip/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="homerow">
+        <a class="left" href="./index.html" target="_blank">
+            lefty
+        </a>
+        <a class="title" href="./index.html" target="_blank">
+            Landing Page
+        </a>
+        <a class="right" href="./index.html" target="_blank">
+            righty
+        </a>
+    </div>
+    <div class="content">
+        <img class="image" src="../images/pfp2.jpg" alt="profile-picture">
+        <h1 class="summary">Focalors</h1>
+    </div>
 </body>
 </html>
